--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,8 @@
 
     {% include footer.html %}
 
+
+  <script type="text/javascript" src="{{ "/js/prism.js" | prepend: site.baseurl }}" ></script>  
   </body>
 
 </html>
