adicionando informações sobre o uptime

--- a/css/main.scss
+++ b/css/main.scss
@@ -55,4 +55,12 @@ $on-laptop:        800px;
 
 span.red{ color:red; }
 
+div.label-error{
+	
+	display:bock;
+	background-color: red;
+	color: #fff;
+
+}
+
 table.table,table.table th, table.table td{ border: 1px solid }
