--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -130,9 +130,9 @@ blockquote {
 pre,
 code {
     font-size: 15px;
-    border: 1px solid $grey-color-light;
+    border: 1px solid $white-not-so;
     border-radius: 3px;
-    background-color: #eef;
+    background-color: #4B5158;
 }
 
 code {
