--- a/css/main.scss
+++ b/css/main.scss
@@ -21,6 +21,7 @@ $brand-color:      #2a7ae2;
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
+$white-not-so:      #F9F9F9;
 
 // Width of the content area
 $content-width:    800px;
